--- a/nbs/00_universe.ipynb
+++ b/nbs/00_universe.ipynb
@@ -72,14 +72,46 @@
    "source": [
     "#| export\n",
     "class Universe:\n",
-    "    def __init__(self, initial_energy):\n",
-    "        self.initial_energy = initial_energy"
+    "    def __init__(self):\n",
+    "        #self.initial_energy = initial_energy\n",
+    "        self.is_earth_gravity = False\n",
+    "        #self.is_friction = False"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c57e782e-1d75-429a-923d-f4133cc73a30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "class BuildUniverse(Universe):\n",
+    "    def __init__(self, universe=Universe()):\n",
+    "        self.universe = universe\n",
+    "    \n",
+    "    def setEarthGravity(\n",
+    "        self,\n",
+    "        value: bool # true or false for earth gravity\n",
+    "    ):\n",
+    "        self.universe.is_earth_gravity = value\n",
+    "        return self\n",
+    "    \n",
+    "    # def enableFriction(\n",
+    "    #     self,\n",
+    "    #     value: bool # true of false for friction\n",
+    "    # ):\n",
+    "    #     self.is_friction = value\n",
+    "    #     return self\n",
+    "    \n",
+    "    def build(self):\n",
+    "        return self.universe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cda2d8b-c544-43f4-816e-3974155f0dff",
    "metadata": {},
    "outputs": [],
    "source": []
