--- a/nbs/01_energy.ipynb
+++ b/nbs/01_energy.ipynb
@@ -47,7 +47,19 @@
    "execution_count": null,
    "id": "db94dcf0-8f35-4566-a880-26d9d60535bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'zorios'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#| export\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msympy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msmp\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mzorios\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'zorios'"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "import sympy as smp\n",
@@ -80,6 +92,14 @@
    "metadata": {},
    "source": [
     "### Work"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f50c563f-d4c6-4965-8173-d51b65e246c0",
+   "metadata": {},
+   "source": [
+    "Work is an amount of energy a force takes to move an object"
    ]
   },
   {
@@ -266,10 +286,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle - \\frac{m_{2} v_{2}^{2}}{2} + \\frac{m_{block} v_{1}^{2}}{2}$"
+       "$\\displaystyle - \\frac{m_{2} v^{2}}{2} + \\frac{m_{block} v^{2}}{2}$"
       ],
       "text/plain": [
-       "-m_2*v_2**2/2 + m_block*v_1**2/2"
+       "-m_2*v**2/2 + m_block*v**2/2"
       ]
      },
      "execution_count": null,
@@ -312,6 +332,30 @@
    "source": [
     "### Potential Energy"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1058be38-a05f-4e89-b259-f7f807d0f7df",
+   "metadata": {},
+   "source": [
+    "Potential energy is the stored energy of an object relative to a position."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fe6e5e4-dca1-4aa2-bc05-1c42e4490723",
+   "metadata": {},
+   "source": [
+    "The force: $\\vec{F}=-\\vec{\\nabla} U$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "195c0094-0b8c-4088-9940-9261d31482a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
