--- a/nbs/Untitled.ipynb
+++ b/nbs/Untitled.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sympy as smp\n",
     "from sympy.physics.vector import ReferenceFrame"
    ]
   },
@@ -205,6 +206,19 @@
    "id": "0f85a2b6-4473-4747-92c7-aa1f3b15b81a",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def magnitude():\n",
+    "    m1, m2, r = smp.symbols(\"m_1 m_2 r\")\n",
+    "    m = m1 * m2\n",
+    "    return smp.Rational(m, r**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe135a2f-132f-4d35-baed-faa9cfbdd3dc",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -213,6 +227,9 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": ""
   }
  },
  "nbformat": 4,
